finished challenge 11, and fixed in palindrome (challenge 9) to return array created from map

--- a/09-palindrome-map/index.html
+++ b/09-palindrome-map/index.html
@@ -7,7 +7,7 @@
 
     <p>Enter text to swap case:</p>
     <input type="text" id="myText" value="racecar boat ytoboty">
-    <button onclick='console.log(Pal.countPalindrome(document.getElementById("myText").value))'>swap case of text</button>
+    <button onclick='console.log(Pal.countPalindrome(document.getElementById("myText").value))'>Check for palindromes</button>
 
 </body>
 
