--- a/10-reverse-string/index.html
+++ b/10-reverse-string/index.html
@@ -7,7 +7,7 @@
 
     <p>Enter text to swap case:</p>
     <input type="text" id="myText" value="This is fun, hopefully.">
-    <button onclick='console.log(Rev.reverseString(document.getElementById("myText").value))'>swap case of text</button>
+    <button onclick='console.log(Rev.reverseString(document.getElementById("myText").value))'>Reverse words!</button>
 
 </body>
 
