completed optional challenge 1

--- a/opt-01-binary/index.html
+++ b/opt-01-binary/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="asciiConverter.js"></script>
+        <script src="binaryConverter.js"></script>
     </head>
 <body onload="convert()">
 
